# business-degree

./: .gitignore  CLAUDE.md  README.md  pnpm-workspace.yaml  pyproject.toml
.claude/: settings.json
curriculum/: 00-four-year-map.md  01-year-1.md
db/: schema.sql
harness/: results.html
lessons/: 101.1-why-accounting-exists.html  101.1.answers.json  101.10-reading-a-real-10k.html  101.10.answers.json  101.2-the-balance-sheet.html  101.2.answers.json  101.3-the-income-statement.html  101.3.answers.json  101.4-the-statement-of-cash-flows.html  101.4.answers.json  101.5-double-entry-bookkeeping.html  101.5.answers.json  101.6-the-accounting-cycle.html  101.6.answers.json  101.7-accrual-vs-cash-basis-revenue-recognition.html  101.7.answers.json  101.8-adjusting-entries-accruals-deferrals-depreciation.html  101.8.answers.json  101.9-closing-the-books-preparing-statements.html  101.9.answers.json  102.1-scarcity-opportunity-cost-ppf.html  102.1.answers.json  102.2-demand-curve-shifts-determinants.html  102.2.answers.json  102.3-supply-curve-shifts-determinants.html  102.3.answers.json  102.4-market-equilibrium-price-discovery.html  102.4.answers.json  103.1-data-types-populations-samples-measurement.html  103.1.answers.json  103.2-descriptive-statistics-center-spread-shape.html  103.2.answers.json  103.3-data-visualization-histograms-boxplots-scatterplots.html  103.3.answers.json  103.4-probability-fundamentals-and-rules.html  103.4.answers.json  104.1-what-managers-do-polc.html  104.1.answers.json  104.2-history-of-management-thought.html  104.2.answers.json  (+5 more)
(+9 files in other folders)
